--- a/index.html
+++ b/index.html
@@ -16,63 +16,65 @@
 
 <body>
 
-  <div class="header">
-    <h1>Realible, efficient delivery</h1>
-    <h2>Powered by technology</h2>
-    <p>
-      Our Artificial intelligence powered tools use millions
-      of project data points to ensure that your project is successful
-    </p>
+  <div class="container">
+
+    <div class="header">
+      <h1>Realible, efficient delivery</h1>
+      <h2>Powered by technology</h2>
+      <p>
+        Our Artificial intelligence powered tools use millions
+        of project data points to ensure that your project is successfull
+      </p>
+    </div>
+
+    <section class="main">
+
+      <div class="card card-1">
+
+        <h2>Supervisor</h2>
+        <p>
+          Monitors Activiti to identify project readblocks
+        </p>
+        <div class="image">
+          <img src="images/icon-supervisor.svg" alt="supervisor">
+        </div>
+      </div>
+
+      <div class="card card-2">
+
+        <h2>Team builder</h2>
+        <p>
+          Scans our talent network to create the optimal team for your project
+        </p>
+        <div class="image">
+          <img src="images/icon-team-builder.svg" alt="buildier">
+        </div>
+      </div>
+
+      <div class="card card-3">
+
+        <h2>Karma</h2>
+        <p>
+          Regularly evaluates our talent to ensure quality
+        </p>
+        <div class="image">
+          <img src="images/icon-karma.svg" alt="karma">
+        </div>
+      </div>
+
+      <div class="card card-4">
+        <h2>Calculator</h2>
+        <p>
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <div class="image">
+          <img src="images/icon-calculator.svg" alt="supervisor">
+        </div>
+      </div>
+
+    </section>
+
   </div>
-
-  <section class="main">
-
-    <div class="card card-1">
-
-      <h2>Supervisor</h2>
-      <p>
-        Monitors Activiti to identify project readblocks
-      </p>
-      <div class="image">
-        <img src="images/icon-supervisor.svg" alt="supervisor">
-      </div>
-    </div>
-
-    <div class="card card-2">
-
-      <h2>Team builder</h2>
-      <p>
-        Monitors Activiti to identify project readblocks
-      </p>
-      <div class="image">
-        <img src="images/icon-team-builder.svg" alt="buildier">
-      </div>
-    </div>
-
-    <div class="card card-3">
-
-      <h2>Karma</h2>
-      <p>
-        Monitors Activiti to identify project readblocks
-      </p>
-      <div class="image">
-        <img src="images/icon-karma.svg" alt="karma">
-      </div>
-    </div>
-
-    <div class="card card-4">
-      <h2>Calculator</h2>
-      <p>
-        Monitors Activiti to identify project readblocks
-      </p>
-      <div class="image">
-        <img src="images/icon-calculator.svg" alt="supervisor">
-      </div>
-    </div>
-
-  </section>
-
-
 
 </body>
 
